examples/errors/MultipleFunctions.con
clone x = x .
clone y = y .
